sprint-3/styles/main.css
/* ... */
.bio__header-wrapper, .bio__article-wrapper {
  margin: 0 5%;
}

.bio__article-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.bio__header {
  font-family: "AvenirBold";
  font-size: 24px;
  line-height: 32px;
  margin-top: 32px;
  margin-bottom: 24px;
}

.bio__band-img {
  margin: 0;
  width: 90%;
  min-height: 145px;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
}

.bio__quote, .bio__quote-speaker, .bio__sub-header {
  font-family: "AvenirDemiBold";
  font-size: 14px;
  line-height: 22px;
}

.bio__quote {
  margin: 24px 0 32px 0;
}

.bio__quote-speaker {
  margin: 0;
}

.bio__sub-header {
  margin: 40px 0 24px 0;
}

.bio__text {
  font-size: 13px;
  line-height: 18px;
  margin-bottom: 24px;
}

.bio__text:last-of-type {
  margin-bottom: 40px;
}

@media only screen and (min-width: 768px) {
  .bio__header-wrapper, .bio__article-wrapper {
    margin: 0 3.13%;
  }
  .bio__header {
    font-size: 36px;
    line-height: 44px;
    margin: 48px 0;
  }
  .bio__band-img {
    width: 93.75%;
    min-height: 362px;
  }
  .bio__quote, .bio__sub-header {
    font-family: "AvenirBold";
    font-size: 24px;
    line-height: 32px;
  }
  .bio__quote-speaker {
    font-size: 16px;
    line-height: 24px;
  }
  .bio__quote {
    margin: 48px 0 40px 0;
  }
  .bio__sub-header {
    margin: 40px 0 32px 0;
  }
  .bio__paragraph-wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .bio__text {
    font-size: 14px;
    line-height: 22px;
  }
  .bio__text:last-of-type {
    margin-left: 24px;
    margin-bottom: 48px;
  }
}

@media only screen and (min-width: 1440px) {
  .bio__header-wrapper {
    margin: 0 12.5%;
  }
  .bio__article-wrapper {
    margin: 0 18.89% 48px 18.89%;
  }
  .bio__band-img {
    width: 62.22%;
    min-height: 450px;
  }
  .bio__sub-header {
    margin: 56px 0 32px 0;
  }
  .bio__text {
    min-width: 420px;
  }
  .bio__text:last-of-type {
    margin-left: 40px;
  }
}

.gallery {
  background-color: #fafafa;
  padding: 32px 0;
}

.gallery__wrapper {
  margin: 0 5%;
}

.gallery__header {
  font-family: "AvenirBold";
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
}

.gallery__photo-wrapper {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.gallery__photo {
  margin: 0 0 16px 0;
  min-height: 126px;
  width: 100%;
}

.gallery__grayscale {
  -webkit-filter: grayscale(100%);
          filter: grayscale(100%);
}

.gallery__grayscale:hover {
  -webkit-filter: grayscale(0%);
          filter: grayscale(0%);
}

@media only screen and (min-width: 768px) {
  .gallery {
    width: 100%;
    padding-top: 48px;
    padding-bottom: 40px;
  }
  .gallery__wrapper {
    margin: 0 3.13%;
  }
  .gallery__header {
    font-size: 36px;
    line-height: 44px;
    margin-bottom: 64px;
  }
  .gallery__photo-wrapper {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
            justify-content: space-evenly;
  }
  .gallery__photo {
    min-height: 162px;
    width: 31%;
    margin-bottom: 24px;
  }
}

@media only screen and (min-width: 1440px) {
  .gallery__wrapper {
    margin: 0 12.5%;
  }
  .gallery__photo {
    min-height: 193px;
  }
}

.conversation {
  margin: 0 5%;
}

.conversation__header {
  font-family: 'AvenirBold';
  margin: 32px 0 40px 0;
  font-size: 24px;
  line-height: 32px;
}

.conversation__wrapper {
  margin-bottom: 40px;
}

.conversation__form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.conversation__avatar-wrapper {
  width: 48px;
  height: 48px;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
}

.conversation__thread {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: reverse;
      -ms-flex-direction: column-reverse;
          flex-direction: column-reverse;
}

.conversation__avatar {
  -o-object-fit: cover;
     object-fit: cover;
  width: inherit;
  height: inherit;
}

.conversation__input {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.conversation__field-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: inherit;
  margin-left: 20px;
}

.conversation__field {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin-bottom: 24px;
}

.conversation__field > {
  width: 100%;
}

.conversation__field-header {
  color: #afafaf;
  font-family: 'AvenirDemiBold';
  font-size: 12px;
  line-height: 20px;
  margin-bottom: 5px;
}

.conversation__fill {
  font-family: 'AvenirReg';
  border: #e1e1e1 2px solid;
  border-radius: 4px;
}

.conversation__fill:focus {
  border: #323232 3px solid;
}

.conversation__cta {
  width: 100%;
  height: 48px;
  margin-bottom: 16px;
  background-color: #323232;
  border-style: none;
  border-radius: 4px;
  font-family: 'AvenirDemiBold';
  text-transform: uppercase;
  color: #fff;
  -ms-flex-item-align: end;
      align-self: flex-end;
}

.conversation__cta:hover {
  background-color: #0065ad;
}
/* ... */

